--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,59 @@
 <app-start></app-start>
 <app-aboutme></app-aboutme>
 <app-skills></app-skills>
-<app-projects></app-projects>
+<app-projects (projectClicked)="showLayer($event)"></app-projects>
+<app-quotes></app-quotes>
+<app-contact></app-contact>
+
+@if (isProjectLayerVisible) {
+    <div class="layer-container">
+        <div class="inner-layer">
+            
+            <div class="layer-left">
+                <p class="number">{{ currentProject.number }}</p>
+                <p class="project-name">{{ currentProject.name }}</p>
+                <h2>{{ getTranslation('PROJECTS.HEADLINE') }}</h2>
+                <p>{{ getTranslation('PROJECTS.PROJECT' + currentProjectIndex + '.DESCRIPTION') }}</p>
+                <div class="skills">
+                    @for (skill of currentProject.skills; track skill) {
+                        <div class="skill">
+                            <img [src]="'../../assets/img/' + skill.toLowerCase() + '_green.svg'" alt="{{ skill }}">
+                            <p>{{ skill }}</p>
+                        </div>
+                    }
+                </div>
+                <div class="buttons-left">
+                    <button>
+                        <p>Github</p>
+                        <img src="../../assets/img/arrow_outward_green.svg" alt="">
+                    </button>
+                    <button>
+                        <p>Live Test</p>
+                        <img src="../../assets/img/arrow_outward_green.svg" alt="">
+                    </button>
+                </div>
+            </div>
+            <div class="layer-right" >
+                <div class="close" (click)="hideLayer()">
+                    <img src="../../assets/img/close_white.svg" alt="">
+                </div>
+                <img [src]="currentProject.imageUrl" alt="">
+                <div class="buttons-right">
+                    
+                    <div class="button-right" (click)="previousProject()" [class.disabled]="currentProjectIndex === 0">
+                        <img src="../../assets/img/arrow_back_green.svg" alt="">
+                        <p>{{ getTranslation('PROJECTS.PREVIOUS') }}</p>
+                    </div>
+                
+                
+                    <div class="button-right" (click)="nextProject()" [class.disabled]="currentProjectIndex === projects.length - 1">
+                        <p>{{ getTranslation('PROJECTS.NEXT') }}</p>
+                        <img src="../../assets/img/arrow_forward_green.svg" alt="">
+                    </div>
+                    
+                </div>
+            </div>
+            
+        </div>
+    </div>
+}
