--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,158 @@
-app-start {
-    width: 100px;
-    height: 100px;
-    background-color: green;
+@import '../../mixins.scss';
+
+.layer-container {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.5); 
+    @include dFlex($fd: row, $jc: center, $ai: center);
+  }
+  
+.inner-layer {
+    background: linear-gradient(45deg, #1c1c1c 40%, #08463B 100%);
+    padding: 50px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid $standard-green;
+    border-radius: 30px;
+    padding: 50px;
+    @include dFlex($fd: row, $jc: center, $ai: center);
+    gap: 100px;
 }
+
+.layer-left {
+    width: 500px;
+    > .number {
+        color: $standard-green;
+        font-size: 128px;
+        font-family: 'Karla';
+        font-weight: 700;
+    };
+    > .project-name {
+        color: white;
+        font-size: 64px;
+        font-family: 'Fira Code';
+        font-weight: 700;
+        margin-top: -10px;
+        padding-bottom: 20px;
+    }
+    > h2 {
+        color: $standard-green;
+        font-size: 24px;
+        font-family: 'Fira Code';
+        font-weight: 700;
+    }
+    > p {
+        color: white;
+        font-size: 18px;
+        font-family: 'Karla';
+        font-weight: 400;
+        padding-bottom: 20px;
+    }
+}
+
+.skills {
+    @include dFlex($fd: row, $jc: flex-start, $ai: flex-start); 
+    gap: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    > .skill {
+        @include dFlex($fd: row, $jc: flex-start, $ai: center); 
+        gap: 5px;
+        > img {
+            height: 24px;
+        };
+        > p {
+            font-size: 16px;
+            font-family: 'Karla';
+            font-weight: 400;
+        }
+    }
+}
+
+.buttons-left {
+    @include dFlex($fd: row, $jc: flex-start, $ai: flex-start); 
+    gap: 30px;
+    padding-top: 20px;
+
+    > button {
+        @include dFlex($fd: row, $jc: center, $ai: center); 
+        gap: 4px;
+        width: 140px;
+        cursor: pointer;
+        transition: border-color 0.15s ease;
+
+        img {
+            transition: transform 0.3s ease; 
+        }
+
+        &:hover {
+            border-color: $standard-green;
+        }
+
+        &:hover img {
+            transform: translate(7px, -4px); 
+        }
+    }
+}
+
+.layer-right {
+    @include dFlex($fd: column, $jc: space-between, $ai: flex-end);
+    height: 550px;
+    > img {
+        width: 520px;
+        border-radius: 30px;
+    }
+}
+
+.close {
+    cursor: pointer;
+    &:hover {
+        filter: brightness(0) saturate(100%) invert(82%) sepia(21%) saturate(1177%) hue-rotate(112deg) brightness(84%) contrast(92%);
+        transform: scale(1.3); /* Vergrößert das Element um 10% */
+        transition: transform 0.3s ease;
+    }
+}
+
+.buttons-right {
+    @include dFlex($fd: row, $jc: flex-start, $ai: flex-start);
+    gap: 30px;
+
+    > .button-right {
+        @include dFlex($fd: row, $jc: flex-start, $ai: center);
+        gap: 10px;
+        cursor: pointer;
+        transition: color 0.3s ease, transform 0.3s ease;
+
+        > p {
+            color: $standard-green;
+            font-size: 18px;
+            font-family: 'Karla';
+            font-weight: 400;
+            transition: color 0.3s ease; 
+        }
+
+        > img {
+            transition: transform 0.3s ease; 
+        }
+
+        &:hover > p {
+            color: white; 
+        }
+    }
+
+    > .button-right:first-child:hover > img {
+        transform: translateX(-10px); 
+    }
+
+    > .button-right:last-child:hover > img {
+        transform: translateX(10px); 
+    }
+}
+
+
+
+
+
