--- a/src/app/main/projects/projects.component.html
+++ b/src/app/main/projects/projects.component.html
@@ -1,23 +1,31 @@
 <div id="projects-container">
     <div class="projects-content">
         <h3>Portfolio</h3>
-        <h1>Featured Projects</h1>
-        <p>Explore a selection of my work here – interact with <br> 
-            projects to see my skills in action.</p>
+        <h1>{{ getTranslation('PORTFOLIO.HEADLINE') }}</h1>
+        <p>{{ getTranslation('PORTFOLIO.TEXT1') }} <br>{{ getTranslation('PORTFOLIO.TEXT2') }}</p>
         <div class="projects list">
             <div class="project-line"></div>
-            <div class="project-details" (mouseenter)="setHoveredIndex(0)" (mouseleave)="setHoveredIndex(null)">
-                <h3>Join</h3>
+            <div class="project-details" (click)="onProjectClick(0)" (mouseenter)="setHoveredIndex(0)" (mouseleave)="setHoveredIndex(null)">
+                <div>
+                    <h3>Join</h3>
+                    <img src="../../../assets/img/arrow_outward.svg" alt="">
+                </div>
                 <p>JavaScript | HTML | CSS | Firebase</p>
             </div>
             <div class="project-line"></div>
-            <div class="project-details" (mouseenter)="setHoveredIndex(1)" (mouseleave)="setHoveredIndex(null)">
-                <h3>Pokedex</h3>
+            <div class="project-details" (click)="onProjectClick(1)" (mouseenter)="setHoveredIndex(1)" (mouseleave)="setHoveredIndex(null)">
+                <div>
+                    <h3>Pokedex</h3>
+                    <img src="../../../assets/img/arrow_outward.svg" alt="">
+                </div>
                 <p>HTML | CSS | Rest-Api</p>
             </div>
             <div class="project-line"></div>
-            <div class="project-details" (mouseenter)="setHoveredIndex(2)" (mouseleave)="setHoveredIndex(null)">
-                <h3>El Pollo Loco</h3>
+            <div class="project-details" (click)="onProjectClick(2)" (mouseenter)="setHoveredIndex(2)" (mouseleave)="setHoveredIndex(null)">
+                <div>
+                    <h3>El Pollo Loco</h3>
+                    <img src="../../../assets/img/arrow_outward.svg" alt="">
+                </div>
                 <p>JavaScript | HTML | CSS</p>
             </div>
             <div class="project-line"></div>
