--- a/src/app/main/projects/projects.component.scss
+++ b/src/app/main/projects/projects.component.scss
@@ -41,12 +41,28 @@
     padding-bottom: 30px;
     padding-top: 30px;
     width: 816px;
-    > h3 {
-        font-family: 'Fira Code';
-        font-weight: 700;
-        color: white;
-        font-size: 24px;
+    &:hover {
+        > div {
+            > img {
+                opacity: 1;
+            }
+        }
     }
+    > div {
+        @include dFlex($fd: row, $jc: flex-start, $ai: center);
+        gap: 7px;
+        > h3 {
+            font-family: 'Fira Code';
+            font-weight: 700;
+            color: white;
+            font-size: 24px;
+        };
+        > img {
+            opacity: 0;
+            
+        }
+    }
+    
     > P {
         font-family: 'Karla';
         font-weight: 400;
