--- a/src/app/main/start/start.component.scss
+++ b/src/app/main/start/start.component.scss
@@ -3,7 +3,7 @@
 #start-container {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to right, #1c1c1c, #08463B);
+    background: linear-gradient(45deg, #1c1c1c 40%, #08463B 100%);
     @include dFlex($fd: column, $jc: center);
 }
 
