--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,23 @@
-<p>footer works!</p>
+<div id="footer-container">
+    <div class="footer-content">
+        <div class="footer-left">
+            <img src="../../../assets/img/logo.png" alt="">
+            <p>Web Developer</p>
+            <p>Hamburg</p>
+        </div>
+        <div class="footer-middle">
+            <p>© Axel Zimmermann 2024</p>
+        </div>
+        <div class="footer-right">
+            <a href="#">Github</a>
+            <a href="#">LinkedIn</a>
+            <a href="#">Email</a>
+            <a href="#">Impressum</a>
+        </div>
+
+
+
+
+
+    </div>
+</div>
