--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@ p {
     margin-block-start: 0;
     margin-block-end: 0;
     font-size: 20px;
+    color:white;
 }
 
 a {
@@ -76,7 +77,7 @@ h2 {
 
 h3 {
   font-family: 'Karla';
-    font-weight: 700;
+    font-weight: 500;
     color: $standard-green;
     font-size: 24px;
     margin-block-start: 0;
