--- a/src/app/main/projects/projects.component.html
+++ b/src/app/main/projects/projects.component.html
@@ -3,7 +3,7 @@
         <h3>Portfolio</h3>
         <h1>{{ getTranslation('PORTFOLIO.HEADLINE') }}</h1>
         <p>{{ getTranslation('PORTFOLIO.TEXT1') }} <br>{{ getTranslation('PORTFOLIO.TEXT2') }}</p>
-        <div class="projects list">
+        <div class="projects-list">
             <div class="project-line"></div>
             <div class="project-details" (click)="onProjectClick(0)" (mouseenter)="setHoveredIndex(0)" (mouseleave)="setHoveredIndex(null)">
                 <div>
