--- a/src/app/main/start/start.component.html
+++ b/src/app/main/start/start.component.html
@@ -4,8 +4,12 @@
         <p class="main-name">Axel Zimmermann</p>
         <p class="main-name-split">Axel<br> Zimmermann</p>
         <div class="start-buttons">
-            <button><span>{{ getTranslation('START.BUTTON1') }}</span></button>
-            <button><span>{{ getTranslation('START.BUTTON2') }}</span></button>
+            <a href="#projects">
+                <button><span>{{ getTranslation('START.BUTTON1') }}</span></button>
+            </a>
+            <a href="#contact">
+                <button><span>{{ getTranslation('START.BUTTON2') }}</span></button>
+            </a>
         </div>
         
     </div>
@@ -16,7 +20,7 @@
                 <span>{{ getTranslation('START.BANDEROLE1') }}</span>
                 <span>{{ getTranslation('START.BANDEROLE2') }}</span>
                 <span>{{ getTranslation('START.BANDEROLE3') }}</span>
-                <span>{{ getTranslation('START.BANDEROLE2') }}</span>
+                <span>{{ getTranslation('START.BANDEROLE3') }}</span>
                 }   
             </div>
         
@@ -33,7 +37,7 @@
             </div>
         
             <div class="line-element-right">
-                <a href="#">axel.zimmermann89&#64;gmail.com</a>
+                <a href="mailto:axel@axel.zimmermann.com">axel&#64;axel-zimmermann.com</a>
                 <div class="start-some">
                     <img src="../../../assets/img/github-green.svg" alt="">
                     <div class="link-dot"></div>
