--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,22 +8,48 @@
         </div>
         <div class="header-links">
             <div class="header-single-link">
-                <a href="#">{{ getTranslation('HEADER.ABOUT') }}</a>
+                <a href="#aboutme">{{ getTranslation('HEADER.ABOUT') }}</a>
                 <div class="link-dot"></div>
             </div>
             <div class="header-single-link">
-                <a href="#">{{ getTranslation('HEADER.SKILLS') }}</a>
+                <a href="#skills">{{ getTranslation('HEADER.SKILLS') }}</a>
                 <div class="link-dot"></div>
             </div>
             <div class="header-single-link">
-                <a href="#">{{ getTranslation('HEADER.PROJECTS') }}</a>
+                <a href="#projects">{{ getTranslation('HEADER.PROJECTS') }}</a>
                 <div class="link-dot"></div>
             </div>
         </div>
         
     </div>
 
-    <img src="../../../assets/img/logo.png" alt="">
+    <a [routerLink]="['/']" ><img class="logo" src="../../../assets/img/logo.png" alt=""></a>
+
+    <img (click)="toggleMobileMenu($event)" class="burger" src="../../../assets/img/menu.svg" alt="">
+
+    <div (click)="$event.stopPropagation()" [ngStyle]="{'display': isMobileMenu ? 'block' : 'none'}" class="mobile-menu">
+        
+        <div class="header-links">
+            <div class="header-single-link">
+                <a href="#aboutme">{{ getTranslation('HEADER.ABOUT') }}</a>
+                <div class="link-dot"></div>
+            </div>
+            <div class="header-single-link">
+                <a href="#skills">{{ getTranslation('HEADER.SKILLS') }}</a>
+                <div class="link-dot"></div>
+            </div>
+            <div class="header-single-link">
+                <a href="#projects">{{ getTranslation('HEADER.PROJECTS') }}</a>
+                <div class="link-dot"></div>
+            </div>
+        </div>
+
+        <div class="translate-controller">
+            <div class="translate-en" [ngClass]="{'translate-active': activeLang === 'en'}" (click)="setActiveLang('en')">EN</div>
+            <div class="translate-de" [ngClass]="{'translate-active': activeLang === 'de'}" (click)="setActiveLang('de')">DE</div>
+        </div>
+        
+    </div>
 
     </div>
 </div>
