--- a/src/app/main/contact/contact.component.scss
+++ b/src/app/main/contact/contact.component.scss
@@ -74,7 +74,7 @@ input, textarea {
     width: 100%;
     height: 20px;
     &:focus {
-        outline: none; /* Entfernt den Standard-Fokus-Rahmen */
+        outline: none; 
         border: none;
     }
     font-family: 'Karla';
@@ -92,7 +92,7 @@ input, textarea {
 
 .invalid-placeholder::placeholder {
     color: rgba(236,123,123,0.8);
-  }
+}
 
 .check-area {
     @include dFlex($fd: row, $jc: flex-start, $ai: center);
@@ -113,6 +113,7 @@ input, textarea {
         }
     }
 }
+
 .checkbox {
     @include dFlex($fd: row, $jc: center, $ai: center);
     width: 24px;
@@ -137,5 +138,62 @@ input, textarea {
             background-color: rgba(61,207,182,0.15);
             cursor: pointer;
         }
+    }
+}
+
+.success {
+    color: $standard-green !important;
+}
+
+@media (max-width: 1450px) {
+    #contacts-container {
+        padding-bottom: 40px;
+    }
+    .contacts-content {
+        @include dFlex($fd: column, $jc:flex-start, $ai: center);
+        gap: 64px;
+        width: 90%;
+        @include margin-sides($le: 0px, $ri: 0px);
+    }
+    .contacts-left {
+        max-width: 616px;
+        width: 100%;
+    }
+    .contacts-right {
+        max-width: 616px;
+        width: 100%;
+    }
+    form {
+        > .line {
+            width: 100%;
+        }
+        .contact-field {
+            width: 100%;
+            box-sizing: border-box;  
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    h1 {
+        font-size: 40px;
+    }
+    h3, h2 {
+        font-size: 20px;
+    }
+    .contact-field {
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        
+        gap: 10px;
+    }
+    label {
+        font-size: 18px;
+    }
+    .check-area {
+        padding-top: 50px;
+        padding-bottom: 20px;
     }
 }
