--- a/src/app/main/quotes/quotes.component.html
+++ b/src/app/main/quotes/quotes.component.html
@@ -1,15 +1,10 @@
-
-
 <div id="quotes-container">
     <div class="quotes-content">
         <h2>{{ getGeneralTranslation('QUOTES.HEADLINE') }}</h2>
-        <div class="carousel">
-
-            
-            <div class="carousel-wrapper">
-           
+        <div class="carousel">            
+            <div class="carousel-wrapper">          
             @for (quote of visibleQuotes; track quote.name; let index = $index) {
-                <div class="quote" [ngClass]="{ 'small-quote': index !== 1 }">
+                <div class="quote" [ngClass]="{ 'small-quote': index !== 1, 'transform-right': isTransformed }">
                     <p>{{ quote.text }}</p>
                     <div class="quote-bottom">
                         <div class="quote-line"></div>
@@ -18,8 +13,7 @@
                         </div>
                     </div>
                 </div>
-            }
-            
+            }        
             </div>
         </div>
         <div class="quotes-navigation">
@@ -29,13 +23,5 @@
             }
             <img src="../../../assets/img/arrow_forward.svg" (click)="nextQuote()" alt="Next">
         </div>
-
-
-
-
-
-
-
-
     </div>
 </div>
