--- a/src/app/main/skills/skills.component.scss
+++ b/src/app/main/skills/skills.component.scss
@@ -3,11 +3,8 @@
 #skills-container {
     width: 100%;
     position: relative;
-    // background: radial-gradient(ellipse at left, #08463B 5%, #1C1C1C 70%);
-    // background: radial-gradient(ellipse 50% 100% at left, #08463B 5%, #1C1C1C 30%);
-    background: radial-gradient(ellipse 50% 100% at 0% 60%, #08463B 5%, #1C1C1C 30%);
+    background: radial-gradient(ellipse 60% 120% at 5% 60%, #08463B 5%, #1C1C1C 30%);
     padding-bottom: 150px;
-
     @include dFlex($fd: row, $jc: center, $ai: center);
 }
 
@@ -16,8 +13,6 @@
     @include dFlex($fd: column, $jc:flex-start, $ai: flex-start);
     gap: 20px;
     @include margin-sides($le: 96px, $ri: 96px);
-    // padding-top: 150px;
-    // padding-bottom: 150px;
 }
 
 .skills-headline {
@@ -27,8 +22,7 @@
     font-size: 24px;
 }
 
-.skills-main-content {
-    
+.skills-main-content {   
     @include dFlex($fd: row, $jc:flex-start, $ai: flex-start);
     gap: 150px;
 }
@@ -39,7 +33,6 @@
     border-radius: 30px;
     background-color: rgba(61,207,182,0.1);
     padding: 32px;
-
     > p {
         font-family: 'Karla';
         font-weight: 400;
@@ -62,7 +55,6 @@
     width: 100px;
     height: 100px;
     gap: 8px;
-
     > img {
         width: 60px;
     }
@@ -79,18 +71,23 @@
     }
 }
 
+.bubble-container {
+    position: relative;
+}
+
 .speech-bubble {
     position: absolute;
-    bottom: 260px;
-    right: 410px;
-    background-color: white; /* Farbe der Sprechblase */
+    z-index: 50;
+    bottom: 110px;
+    right: -100px;
+    background-color: white; 
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
     width: 200px;
     height: 100px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
     @include dFlex($fd: column, $jc:center, $ai: center);
-    gap: 10px;
+    gap: 20px;
     display: none;
     > p {
         font-family: 'Karla';
@@ -104,13 +101,13 @@
   .speech-bubble:after {
     content: '';
     position: absolute;
-    bottom: -20px; /* Positioniert das Dreieck unterhalb der Sprechblase */
-    left: 50px; /* Positioniert das Dreieck horizontal an der Unterseite */
+    bottom: -20px; 
+    left: 50px; 
     width: 0;
     height: 0;
     border-left: 20px solid transparent;
     border-right: 20px solid transparent;
-    border-top: 20px solid white; /* Farbe der Sprechblase */
+    border-top: 20px solid white; 
   }
 
   .skills-bubble {
@@ -120,7 +117,6 @@
 
   .skill-bubble {
     @include dFlex($fd: column, $jc:space-between, $ai: center);
-    
     height: 52px;
     > img {
         width: 32px;
@@ -133,4 +129,49 @@
         text-align: center;
     }
   }
-  
+
+  @media (max-width: 1440px) {
+    .skills-content {
+        width: 90%;
+        @include margin-sides($le: 0px, $ri: 0px);
+        @include dFlex($fd: column, $jc:flex-start, $ai: flex-start);
+    }
+    .skills-main-content {   
+        width: 100%;
+        @include dFlex($fd: column, $jc:flex-start, $ai: flex-start);
+        gap: 40px;
+    }
+  }
+
+  @media (max-width: 680px) {
+    .skills-left {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    .skills-icons {
+        width: 100%;
+        box-sizing: border-box;
+        justify-content: center;
+    }
+    .skill-icon {
+        width: 50px;
+        height: 50px;
+        gap: 8px;
+    
+        > img {
+            width: 50px;
+        }
+        > p {
+            font-size: 16px;
+            color: white;
+            text-align: center;
+        }
+    }
+    .speech-bubble {
+        bottom: 63px;
+        right: -85px;
+    }
+    .speech-bubble:after {
+        left: 90px;
+    }
+}
